# AGBD-GPR

./: .gitignore  CITATION.cff  DATA.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: euler.yaml  evaluation_nico_film_best.txt  evaluation_nico_film_ens_agbd.txt  evaluation_nico_film_ens_agbd_nolatlon.txt  evaluation_nico_film_ens_agbd_s2_nolatlon.txt  local.yaml  pf-pc28.yaml
example/: README.md  single_tile_pipeline.ipynb
examples/: single_tile_pipeline.ipynb
scripts/train/: 128_MLP_all_biomecat2vec+region_1e-5.sh  128_MLP_all_biomecat2vec+region_1e0.sh  128_MLP_entry_biomecat2vec+region_1e-5.sh  128_MLP_entry_biomecat2vec+region_1e-5_longskip.sh  128_MLP_entry_biomecat2vec+region_1e0.sh  128_MLP_entry_biomeonehot+region_1e-5.sh  64_Linear_all_biomecat2vec+region_1e0.sh  64_MLP_all_biomecat2vec+region_1e0.sh  64_MLP_all_biomecat2vec_1e0.sh  64_MLP_all_biomeonehot_1e0.sh  64_MLP_entry_biomecat2vec+region_1e0.sh  64_MLP_entry_biomeonehot+region_1e-5.sh  64_MLP_entry_biomeonehot+region_1e-5_longskip.sh  best.sh
src/: config.py  wandb_utils.py
src/data_prep/: cloud_mask.py  composite.py  orbit_tile_analysis.py  region_mapping.py
src/figures/metrics/: compute_post_RMSE.py  compute_post_binned_histogram.py  compute_pre_RMSE.py  compute_pre_binned_histogram.py
src/figures/plots/: binned-histogram.py  binned-rmse.py  biome-spiderplot.py  density-plots.py  overall_metrics.py  region-spiderplot.py
src/inference/: inference.py  inference_composite.py  inference_ds.py  inference_helper.py  inference_mapping.py  inference_merge.py  inference_residuals.py
src/kriging/: core.py  find_problematic_indices.py  gp.py  kriging.py  kriging.sh  post_merge.py  post_merge.sh  predict.py  predict.sh  subset_tiles.py  threshold.py  threshold.sh
src/kriging/txt_files/: 30PWS.txt  ESA_2020.txt  all_2020.txt  correction.txt  eval_preds_test.txt  subset_tiles.txt  valid_2020.txt
src/model/: biomes.py  dataset.py  eval.py  loss.py  models.py  nico_net_film.py  parser.py  train.py  wrapper.py
src/sumatra/: README.md  common.py  compose_figure.py  get_results.ipynb  kriging.sh  kriging_downsampled_gedi.py  kriging_gedi.py  kriging_ours_gedi.py  paths.py  pipeline.py
src/sumatra/Resources/: geometry.geojson  sumatra_products.txt  sumatra_tiles.txt
src/sumatra/data/: README.md
src/sumatra/data/inputs/: GEDI_L4B_AGBD_Sumatra.tif  agbd_1000m.tif  agbd_500m.tif
src/sumatra/data/outputs/: splits-sumatra_cci_gedi_0.3_0.2_25000_15.0_50-gedi.pkl  splits-sumatra_downsampled_gedi_composite_0.3_0.2_25000_15.0_50-gedi.pkl
tools/: backfill_config.py
