[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biofilm-gpr-agb"
version = "0.1.0"
description = "BioFiLM + Gaussian Process Regression for bias correction of satellite-based AGB estimates"
requires-python = ">=3.10,<3.12"

# Core dependencies for the full pipeline (model training, inference, kriging, Sumatra use case).
# The geospatial stack (rasterio/geopandas/pyogrio/shapely/pyproj) installs from manylinux wheels
# that bundle their own GDAL/GEOS/PROJ — no system GDAL is required.
dependencies = [
    "numpy>=1.24,<2",       # <2: the model code is tested on the numpy 1.x line
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "scikit-learn>=1.1",
    "scikit-image>=0.21",
    "h5py>=3.8",
    "tqdm>=4.65",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "rasterio>=1.3",
    "geopandas>=0.14",      # >=0.14 for the pyogrio read engine used across the repo
    "pyogrio>=0.7",
    "shapely>=2.0",
    "pyproj>=3.5",
    "torch>=2.2",
    "torchvision>=0.17",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "gpytorch>=1.11",
    "linear-operator>=0.5",
    "datasets>=2.10",
]

[project.optional-dependencies]
# Experiment tracking (off by default; enable with USE_WANDB=true).
tracking = ["wandb>=0.15"]
# Running the notebooks (e.g. src/sumatra/get_results.ipynb, examples/).
notebook = ["ipykernel>=6", "jupyter>=1.0"]
# Sentinel-2 cloud masking (src/data_prep/cloud_mask.py) — pulls the IPL-UV cloudSEN12 model.
cloudmask = [
    "georeader-spaceml",
    "cloudsen12_models @ git+https://github.com/IPL-UV/cloudsen12_models",
]
# Interactive debugging.
dev = ["ipdb"]

[tool.setuptools]
py-modules = ["config", "wandb_utils"]

[tool.setuptools.packages.find]
where = ["src"]

# --- uv notes -------------------------------------------------------------------------------
# Install with:   uv sync --extra notebook        (add --extra tracking / cloudmask as needed)
# On Linux the default `torch` wheel is CUDA-enabled. For a CPU-only machine, install torch from
# the CPU index, e.g.:  uv pip install torch --index-url https://download.pytorch.org/whl/cpu
